[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/SaveNode/Mob/boxmanupdown.gd" type="Script" id=1]
[ext_resource path="res://GFX/Charcter/boxman1.png" type="Texture" id=2]
[ext_resource path="res://GFX/Charcter/boxman2.png" type="Texture" id=3]
[ext_resource path="res://GFX/Charcter/boxman0.png" type="Texture" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "crawl",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "down",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "up",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32, 32 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32, 5.5 )

[node name="boxman" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "crawl"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 31.5 )
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 1.3
one_shot = true

[node name="Timer3" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_Timer3_timeout"]
